Contact Form Spacing Fixes

--- a/main.css
+++ b/main.css
@@ -101,6 +101,6 @@ input, textarea {
     width: 100%;
 }
 
-.form-box ul {
+.form-box contact-list {
     float: right;
 }
